--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
   <title>Weather</title>
+  <style>
+    .image{
+      max-width: 99%; 
+    }
+  </style>
 </head>
 <body>
-  <img src="snaps/" class="image" alt="cannot load image">
-  <img src="snaps/" class="image" alt="cannot load image">
-  <img src="snaps/" class="image" alt="cannot load image">
+  <img src="Snaps/1. DataEntryPage.png" class="image" alt="cannot load image">
+  <img src="Snaps/2. SearchLocation.png" class="image" alt="cannot load image">
+  <img src="Snaps/3. WeatherDetails" class="image" alt="cannot load image">
 </body>
