--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 <body>
   <img src="Snaps/1. DataEntryPage.png" class="image" alt="cannot load image">
   <img src="Snaps/2. SearchLocation.png" class="image" alt="cannot load image">
-  <img src="Snaps/3. WeatherDetails" class="image" alt="cannot load image">
+  <img src="Snaps/3. WeatherDetails.png" class="image" alt="cannot load image">
 </body>
