--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
   <title>Weather</title>
   <style>
     .image{
-      max-width: 99%; 
+      max-width: 80%; 
     }
   </style>
 </head>
 <body>
+  <h1>Home Page</h1>
   <img src="Snaps/1. DataEntryPage.png" class="image" alt="cannot load image">
+  <h1>Enter City Name</h1>
   <img src="Snaps/2. SearchLocation.png" class="image" alt="cannot load image">
+  <h1>Get Response</h1>
   <img src="Snaps/3. WeatherDetails.png" class="image" alt="cannot load image">
 </body>
