--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
   <title>Weather</title>
   <style>
+    body{
+        text-align: center;
+    }
     .image{
-      max-width: 80%; 
+        max-width: 90%;
+        padding: 0 0 5%;
+    }
+    h1{
+        text-align:initial;
+        padding: 0 5% 0;
     }
   </style>
 </head>
-<body>
+<body> 
   <h1>Home Page</h1>
   <img src="Snaps/1. DataEntryPage.png" class="image" alt="cannot load image">
   <h1>Enter City Name</h1>
