--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </style>
 </head>
 <body> 
+  <strong>This is not the actual webpage. This project requires Node server to run. <br>These screenshots show how the webpage looks. Goto github.com/siracom/Weather/ to see the source code.<br><a href="https://github.com/siracom/Weather">Click Here to go</a> or scroll down to have a glance.</strong>
   <h1>Home Page</h1>
   <img src="Snaps/1. DataEntryPage.png" class="image" alt="cannot load image">
   <h1>Enter City Name</h1>
